modified:   Knight.html

--- a/Knight.html
+++ b/Knight.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>The Kight</title>
+        <title>The Knight</title>
     </head>
     <body>
         <button onclick="location.href='index.html'" type="button"><img src="logo.png" height="75px"></button>
