modified:   Template.html

--- a/Template.html
+++ b/Template.html
@@ -5,7 +5,7 @@
         <title>Title of Page</title>
     </head>
     <body>
-        <button onclick="location.href='index.html'" type="button"><img src="header.jpg" width="200px"></button>
+        <button onclick="location.href='index.html'" type="button"><img src="logo.png" height="75px"></button>
         <h1>Page Name</h1>
         <hr>
         <div class="clearfix">
