modified:   Knight.html

--- a/Knight.html
+++ b/Knight.html
@@ -24,6 +24,9 @@
             <tr>
                 <td><a href="#Section3">Chill Knight</a></td>
             </tr>
+            <tr>
+                <td><a href="#Section4">Meeple</a></td>
+            </tr>
 
             
         </table>
@@ -37,6 +40,7 @@
         <img class="TinyPic" src="idle.png" alt="Chill Knight">
         <p>The Chill Knight is a simple colour swap of the Knight, with the greys being replaced with blue, and the red being replaced with green.<br>
             It was made by me, and is based of Cirno from Touhou Project.</p>
-
+        <h3 id="Section4">Meeple</h3>
+        <p>Meeple</p>
     </body>
 </html>
