modified:   Knight.html

--- a/Knight.html
+++ b/Knight.html
@@ -41,7 +41,7 @@
         <p>The Chill Knight is a simple colour swap of the Knight, with the greys being replaced with blue, and the red being replaced with green.<br>
             It was made by me, and is based of Cirno from Touhou Project.</p>
         <h3 id="Section4">Meeple</h3>
-        <img class="TinyPic" src="Meep.png" alt="Meeple">
+        <img class="TinyPic" src="Meep.png" alt="Meeple" height="30px">
         <p>Meeple</p>
     </body>
 </html>
