modified:   Knight.html 	new file:   lloyd.gif

--- a/Knight.html
+++ b/Knight.html
@@ -27,6 +27,9 @@
             <tr>
                 <td><a href="#Section4">Meeple</a></td>
             </tr>
+            <tr>
+                <td><a href="#Section5">lloyd</a></td>
+            </tr>
 
             
         </table>
@@ -43,5 +46,8 @@
         <h3 id="Section4">Meeple</h3>
         <img class="TinyPic" src="Meep.png" alt="Meeple" height="30px">
         <p>Meeple</p>
+        <h3 id="Section5">lloyd</h3>
+        <img class="TinyPic" src="lloyd.gif" alt="lloyd">
+        <p>lloyd</p>
     </body>
 </html>
