--- a/Knight.html
+++ b/Knight.html
@@ -45,7 +45,8 @@
             It was made by me, and is based of Cirno from Touhou Project.</p>
         <h3 id="Section4">Meeple</h3>
         <img class="TinyPic" src="Meep.png" alt="Meeple" height="30px">
-        <p>Meeple</p>
+        <p>Meeple is a costume made by <a href="https://www.youtube.com/channel/UC3zz1_-uLzmax5xUkWEu4uw">EpicBettaFish</a>.<br>
+        The Meeple is from <a href="https://store.steampowered.com/app/2344580/Meeple_Jump/">Meeple Jump</a>, which you should go wishlist.</p>
         <h3 id="Section5">lloyd</h3>
         <img class="TinyPic" src="lloyd.gif" alt="lloyd">
         <p>lloyd</p>
