modified:   Knight.html

--- a/Knight.html
+++ b/Knight.html
@@ -49,6 +49,6 @@
         The Meeple is from <a href="https://store.steampowered.com/app/2344580/Meeple_Jump/">Meeple Jump</a>, which you should go wishlist.</p>
         <h3 id="Section5">lloyd</h3>
         <img class="TinyPic" src="lloyd.gif" alt="lloyd">
-        <p>lloyd</p>
+        <p>lloyd is love, lloyd is life.</p>
     </body>
 </html>
