new file:   Discord.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="1actose.html">1actose</a></li>
             <li><a href="Knight&Mourning.html">Knight & Mourning</a></li>
             <li><a href="Knight.html">The Knight</a></li>
+            <li><a href="Discord.html">The Milky Way</a></li>
         </ul>
         <hr>
     </body>
