new file:   Wizz.html 	modified:   index.html     Its wizzin time

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="Knight&Mourning.html">Knight & Mourning</a></li>
             <li><a href="Knight.html">The Knight</a></li>
             <li><a href="Discord.html">The Milky Way</a></li>
+            <li><a href="Wizz.html">Wizz</a></li>
         </ul>
         <hr>
     </body>
