modified:   Discord.html 	modified:   Wizz.html 	new file:   todo.txt

--- a/Discord.html
+++ b/Discord.html
@@ -9,33 +9,38 @@
         <h1>The Milky Way</h1>
         <hr>
         <div class="clearfix">
-        <img src="Th123Sanae.png" alt="Template Image">
-        <p>This is a page to make a default css file,<br>
-            and a html file I can easily copy to make new pages.</p>
+        <p>The Milky Way is <a href="1actose.html">1actose's</a> discord server.</p>
         <table>
             <tr>
                 <td>Contents</td>
             </tr>
             <tr>
-                <td><a href="#Section1">Section 1</a></td>
+                <td><a href="#Section1">Channels</a></td>
             </tr>
             <tr>
-                <td><a href="#Section2">Section 2</a></td>
+                <td><a href="#Section2">Roles</a></td>
             </tr>
             <tr>
-                <td><a href="#Section3">Section 3</a></td>
+                <td><a href="#Section3">Invite</a></td>
             </tr>
             
         </table>
         </div>
         <hr>
-        <h2 id="Section1">Section 1</h2>
-        <p>a</p>
+        <h2 id="Section1">Channels</h2>
+        <table>
+            <tr>
+                <td>Name</td>
+                <td>Type</td>
+                <td>Description</td>
+                <td>Roles Needed</td>
+            </tr>
+        </table>
         <hr>
-        <h2 id="Section2">Section 2</h2>
+        <h2 id="Section2">Roles</h2>
         <p>b</p>
         <hr>
-        <h2 id="Section3">Section 3</h2>
+        <h2 id="Section3">Invite</h2>
         <p>c</p>
         <hr>
     </body>
