--- a/Wizz.html
+++ b/Wizz.html
@@ -9,34 +9,31 @@
         <h1>Wizz</h1>
         <hr>
         <div class="clearfix">
-        <img src="Th123Sanae.png" alt="Template Image">
-        <p>This is a page to make a default css file,<br>
-            and a html file I can easily copy to make new pages.</p>
+        <!--<img src="Th123Sanae.png" alt="Template Image">-->
+        <p>Wizz is a character from <a href="Knight&Mourning.html">Knight & Mourning</a>.</p>
         <table>
             <tr>
                 <td>Contents</td>
             </tr>
             <tr>
-                <td><a href="#Section1">Section 1</a></td>
+                <td><a href="#Section1">Canon</a></td>
             </tr>
             <tr>
-                <td><a href="#Section2">Section 2</a></td>
+                <td><a href="#Section2">Theories/Fanon</a></td>
             </tr>
             <tr>
-                <td><a href="#Section3">Section 3</a></td>
+                <td><a href="#Section3">aStni is Wizz</a></td>
             </tr>
             
         </table>
         </div>
         <hr>
-        <h2 id="Section1">Section 1</h2>
-        <p>a</p>
+        <h2 id="Section1">Canon</h2>
+        <p>As I don't have the game, this section will have to be completed at a later date.</p>
         <hr>
-        <h2 id="Section2">Section 2</h2>
-        <p>b</p>
-        <hr>
-        <h2 id="Section3">Section 3</h2>
-        <p>c</p>
+        <h2 id="Section2">Theories/Fanon</h2>
+        <h3 id="Section3">aStni is Wizz</h3>
+        <p><a href="https://www.youtube.com/@aStni">aStni</a>, an indie dev who is apart of <a href="Discord.html">The Milky Way</a>, has jokingly been saying he is Wizz.</p>
         <hr>
     </body>
 </html>
