new file:   Assets/asset1.png 	new file:   Assets/asset2.png 	new file:   Assets/asset3.png 	new file:   Assets/asset4.png 	new file:   Assets/asset5.png 	new file:   Assets/asset6.png 	new file:   Assets/asset7.png 	new file:   Assets/asset8.png 	new file:   Assets/asset9.png 	new file:   Assets/icon.png 	new file:   Assets/logo.png 	new file:   Assets/logo2.png 	new file:   Assets/logo3.png 	new file:   Assets/logo4.png 	new file:   Assets/logo5.png 	modified:   Knight&Mourning.html 	modified:   Knight.html 	modified:   Wizz.html 	modified:   todo.txt

--- a/Knight&Mourning.html
+++ b/Knight&Mourning.html
@@ -9,11 +9,14 @@
         <h1>Knight & Mourning</h1>
         <hr>
         <div class="clearfix">
-        <img src="header.jpg" alt="Steams Header For The Game">
+        <img src="Assets/logo.png" alt="Logo" width="300px">
         <p>Knight & Mourning is a 2d platformer made by the indie dev/youtuber <a href="1actose.html">1actose</a>. It is releasing on the 11th of April, 2023.</p>
         <table>
             <tr>
                 <td>Contents</td>
+            </tr>
+            <tr>
+                <td><a href="#Section0">Conception</a></td>
             </tr>
             <tr>
                 <td><a href="#Section1">Gameplay</a></td>
@@ -27,6 +30,10 @@
             
         </table>
         </div>
+        <hr>
+        <h2 id="Section0">Conception</h2>
+        <p>Knight & Mourning was concieved after 1actose failed to learn how to make 3ds homebrew, and then turned to PC game development.<br>
+        The concept of the game came to him while he was looking at speedrunning categoires. The game went into development on the 25th of January, 2022.</p>
         <hr>
         <h2 id="Section1">Gameplay</h2>
         <p>The game is a 2d platformer where players must reach the exit of a level before the timer runs out.
