--- a/Knight.html
+++ b/Knight.html
@@ -9,7 +9,7 @@
         <h1>The Knight</h1>
         <hr>
         <div class="clearfix">
-        <img src="Knight-idle-fixed.png" height="256px">
+        <img src="Assets/asset5.png" height="256px">
         <p>The Knight is the titular and playable character of <a href="Knight&Mourning.html">Knight & Mourning</a>.</p>
         <table>
             <tr>
@@ -37,6 +37,7 @@
         <hr>
         <h2 id="Section1">Alternate Costumes</h2>
         <h3 id="Section2">Skeleton Knight</h3>
+        <img class="TinyPic" src="Assets/asset8.png" alt="Skeleton Knight" height="30px">
         <p>The Skeleton Knight is a costume that allows you to play as the death sprite. It is unlocked after the player has died 1,000 times.<br>
         The costume makes the player invulnerable to spikes.</p>
         <h3 id="Section3">Chill Knight</h3>
@@ -49,6 +50,6 @@
         The Meeple is from <a href="https://store.steampowered.com/app/2344580/Meeple_Jump/">Meeple Jump</a>, which you should go wishlist.</p>
         <h3 id="Section5">lloyd</h3>
         <img class="TinyPic" src="lloyd.gif" alt="lloyd">
-        <p>lloyd is love, lloyd is life.</p>
+        <p>lloyd is love,<br>lloyd is life.</p>
     </body>
 </html>
