--- a/Wizz.html
+++ b/Wizz.html
@@ -9,7 +9,7 @@
         <h1>Wizz</h1>
         <hr>
         <div class="clearfix">
-        <!--<img src="Th123Sanae.png" alt="Template Image">-->
+        <img src="Assets/asset6.png" alt="Wizz Got That Rizz" height="300px">
         <p>Wizz is a character from <a href="Knight&Mourning.html">Knight & Mourning</a>.</p>
         <table>
             <tr>
