modified:   Discord.html

--- a/Discord.html
+++ b/Discord.html
@@ -35,6 +35,36 @@
                 <td>Description</td>
                 <td>Roles Needed</td>
             </tr>
+            <tr>
+                <td>Rules</td>
+                <td>Text</td>
+                <td>Rules Channel</td>
+                <td>None*</td>
+            </tr>
+            <tr>
+                <td>Welcome</td>
+                <td>Text</td>
+                <td>Welcome Channel</td>
+                <td>None*</td>
+            </tr>
+            <tr>
+                <td>Announcements</td>
+                <td>Text</td>
+                <td>Announcements Channel</td>
+                <td>None*</td>
+            </tr>
+            <tr>
+                <td>Polls</td>
+                <td>Text</td>
+                <td>Polls Channel</td>
+                <td>None*</td>
+            </tr>
+            <tr>
+                <td>Roles</td>
+                <td>Text</td>
+                <td>Select Roles!</td>
+                <td>None*</td>
+            </tr>
         </table>
         <hr>
         <h2 id="Section2">Roles</h2>
