modified:   Discord.html

--- a/Discord.html
+++ b/Discord.html
@@ -65,6 +65,66 @@
                 <td>Select Roles!</td>
                 <td>None*</td>
             </tr>
+            <tr>
+                <td>General</td>
+                <td>Text</td>
+                <td>For Chatting And Ideas</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Introduce Yourself</td>
+                <td>Text</td>
+                <td>Tell Us About Yourself!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Memes</td>
+                <td>Text</td>
+                <td>Memes That May Or May Not Be Cleaner Than Your Mama</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Emoji Suggestions</td>
+                <td>Text</td>
+                <td>Safe For Work Emoji Suggestions, Please!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Off Topic</td>
+                <td>Text</td>
+                <td>Say Something Random IDK</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Bot Commands</td>
+                <td>Text</td>
+                <td>COMMAND THE BOTS!!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Plugs</td>
+                <td>Text</td>
+                <td>Plug Your Stuff</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Custom Characters</td>
+                <td>Text</td>
+                <td>Share Your Custom Characters Here!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>MILK</td>
+                <td>Voice</td>
+                <td>General Voice Channel</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Cupcakes</td>
+                <td>Voice</td>
+                <td>Voice Channel For EDP445 Enjoyers /J</td>
+                <td>Certified Cupcake</td>
+            </tr>
         </table>
         <hr>
         <h2 id="Section2">Roles</h2>
