modified:   Discord.html

--- a/Discord.html
+++ b/Discord.html
@@ -18,7 +18,7 @@
                 <td><a href="#Section1">Channels</a></td>
             </tr>
             <tr>
-                <td><a href="#Section2">Roles</a></td>
+                <td><a href="#Section2">Notable People</a></td>
             </tr>
             <tr>
                 <td><a href="#Section3">Invite</a></td>
@@ -127,8 +127,12 @@
             </tr>
         </table>
         <hr>
-        <h2 id="Section2">Roles</h2>
-        <p>b</p>
+        <h2 id="Section2">Notable People</h2>
+        <ul>
+            <li><a href="1actose.html">1actose</a></li>
+            <li><a href="https://www.youtube.com/@aStni">aStni</a></li>
+            <li><a href="https://www.youtube.com/channel/UC3zz1_-uLzmax5xUkWEu4uw">EpicBettaFish</a></li>
+        </ul>
         <hr>
         <h2 id="Section3">Invite</h2>
         <p>c</p>
