modified:   Discord.html

--- a/Discord.html
+++ b/Discord.html
@@ -135,7 +135,7 @@
         </ul>
         <hr>
         <h2 id="Section3">Invite</h2>
-        <p>c</p>
+        <p><a href="https://discord.gg/bsrhmtnRw5">Invite</a></p>
         <hr>
     </body>
 </html>
