modified:   Discord.html 	new file:   Joe.html 	new file:   Tokens.html 	modified:   index.html 	modified:   todo.txt

--- a/Discord.html
+++ b/Discord.html
@@ -132,6 +132,7 @@
             <li><a href="1actose.html">1actose</a></li>
             <li><a href="https://www.youtube.com/@aStni">aStni</a></li>
             <li><a href="https://www.youtube.com/channel/UC3zz1_-uLzmax5xUkWEu4uw">EpicBettaFish</a></li>
+            <li><a href="https://www.youtube.com/@froguish">Froguish</a></li>
         </ul>
         <hr>
         <h2 id="Section3">Invite</h2>
