--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li><a href="Knight.html">The Knight</a></li>
             <li><a href="Discord.html">The Milky Way</a></li>
             <li><a href="Wizz.html">Wizz</a></li>
+            <li><a href="Joe.html">Joe</a></li>
+            <li><a href="Tokens.html">Tokens</a></li>
         </ul>
         <hr>
     </body>
