modified:   1actose.html

--- a/1actose.html
+++ b/1actose.html
@@ -143,6 +143,10 @@
                 <td><a href="https://www.youtube.com/watch?v=4l-gwuEBlj0">Knight And Mourning | RELEASE DATE TRAILER</a></td>
                 <td>2023</td>
             </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=ZY4ZWbC7Nyc">I made Tears of the Kingdom in 1 Day</a></td>
+                <td>2023</td>
+            </tr>
         </table>
         <hr>
         <h2 id="Section3">Links</h2>
