modified:   1actose.html 	modified:   Discord.html 	modified:   Knight&Mourning.html 	modified:   Wizz.html 	modified:   todo.txt

--- a/1actose.html
+++ b/1actose.html
@@ -147,6 +147,10 @@
                 <td><a href="https://www.youtube.com/watch?v=ZY4ZWbC7Nyc">I made Tears of the Kingdom in 1 Day</a></td>
                 <td>2023</td>
             </tr>
+            <tr>
+                <td><a href="https://www.youtube.com/watch?v=MYdnmD8Sblo">1 Year Of Game Development in 3 Minutes</a></td>
+                <td>2023</td>
+            </tr>
         </table>
         <hr>
         <h2 id="Section3">Links</h2>
