--- a/Discord.html
+++ b/Discord.html
@@ -114,6 +114,30 @@
                 <td>None</td>
             </tr>
             <tr>
+                <td>Quality Assurance</td>
+                <td>Text</td>
+                <td></td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Custom Levels Discussion</td>
+                <td>Text</td>
+                <td>Talk About Workshop Levels Here!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Mods Discussion</td>
+                <td>Text</td>
+                <td>Share Mods/Hacks Here!</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td>Modifications</td>
+                <td>Forum</td>
+                <td>Forums For Mods</td>
+                <td>None</td>
+            </tr>
+            <tr>
                 <td>MILK</td>
                 <td>Voice</td>
                 <td>General Voice Channel</td>
