--- a/Knight&Mourning.html
+++ b/Knight&Mourning.html
@@ -10,7 +10,7 @@
         <hr>
         <div class="clearfix">
         <img src="Assets/logo.png" alt="Logo" width="300px">
-        <p>Knight & Mourning is a 2d platformer made by the indie dev/youtuber <a href="1actose.html">1actose</a>. It is releasing on the 11th of April, 2023.</p>
+        <p>Knight & Mourning is a 2d platformer made by the indie dev/youtuber <a href="1actose.html">1actose</a>. It was released on the 11th of April, 2023.</p>
         <table>
             <tr>
                 <td>Contents</td>
