--- a/Wizz.html
+++ b/Wizz.html
@@ -29,7 +29,7 @@
         </div>
         <hr>
         <h2 id="Section1">Canon</h2>
-        <p>As I don't have the game, this section will have to be completed at a later date.</p>
+        <p>As I haven't completed the game, this section will have to be completed at a later date.</p>
         <hr>
         <h2 id="Section2">Theories/Fanon</h2>
         <h3 id="Section3">aStni is Wizz</h3>
