modified:   Knight.html 	modified:   todo.txt

--- a/Knight.html
+++ b/Knight.html
@@ -25,10 +25,37 @@
                 <td><a href="#Section3">Chill Knight</a></td>
             </tr>
             <tr>
-                <td><a href="#Section4">Meeple</a></td>
+                <td><a href="#Section4">Happy Dude</a></td>
             </tr>
             <tr>
-                <td><a href="#Section5">lloyd</a></td>
+                <td><a href="#Section5">Meeple</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section6">Swag Knight</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section7">Cycloptic Knight</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section8">Feverish Knight</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section9">Llyod</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section10">Harvey</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section11">MelonBread</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section12">Pasta Earl</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section13">RTX Knight</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Section14">BL0B3RT</a></td>
             </tr>
 
             
@@ -44,12 +71,30 @@
         <img class="TinyPic" src="idle.png" alt="Chill Knight">
         <p>The Chill Knight is a simple colour swap of the Knight, with the greys being replaced with blue, and the red being replaced with green.<br>
         It was made by me, and is based of Cirno from Touhou Project.</p>
-        <h3 id="Section4">Meeple</h3>
+        <h3 id="Section4">Happy Dude</h3>
+        <p>:&#41</p>
+        <h3 id="Section5">Meeple</h3>
         <img class="TinyPic" src="Meep.png" alt="Meeple" height="30px">
         <p>Meeple is a costume made by <a href="https://www.youtube.com/channel/UC3zz1_-uLzmax5xUkWEu4uw">EpicBettaFish</a>.<br>
         The Meeple is from <a href="https://store.steampowered.com/app/2344580/Meeple_Jump/">Meeple Jump</a>, which you should go wishlist.</p>
-        <h3 id="Section5">lloyd</h3>
-        <img class="TinyPic" src="lloyd.gif" alt="lloyd">
-        <p>lloyd is love,<br>lloyd is life.</p>
+        <h3 id="Section6">Swag Knight</h3>
+        <p>Swaggers</p>
+        <h3 id="Section7">Cycloptic Knight</h3>
+        <p>Immature</p>
+        <h3 id="Section8">Feverish Knight</h3>
+        <p>I Am The Original    PNGKnight</p>
+        <h3 id="Section9">Lloyd</h3>
+        <img class="TinyPic" src="lloyd.gif" alt="Lloyd">
+        <p>Lloyd is love,<br>Lloyd is life.<br>Lloyd is the concious mind,<br>Llyod is the unconcious mind.</p>
+        <h3 id="Section10">Harvey</h3>
+        <p>A Tank</p>
+        <h3 id="Section11">MelonBread</h3>
+        <p>Funny Garlic PNG</p>
+        <h3 id="Section12">Pasta Earl</h3>
+        <p>I'm Scared</p>
+        <h3 id="Section13">RTX Knight</h3>
+        <p>IRL Bussy</p>
+        <h3 id="Section14">BL0B3RT</h3>
+        <p>:0</p>
     </body>
 </html>
